# wakatime-ls

./: Cargo.toml  README.md  dist-workspace.toml  flake.nix  package.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nix.yml  release.yml  rust.yml
src/: lib.rs  main.rs  utils.rs
