[package]
name = "wakatime-ls"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"

description = "A dead-simple language server around wakatime-cli to send code tracking heartbeats"
repository = "https://github.com/mrnossiom/wakatime-ls"
keywords = ["wakatime", "language-server", "lsp"]
categories = ["development-tools"]
license = "CECILL-2.1"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"

[lints]
[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.dist]
inherits = "release"
lto = "thin"
