[package]
name = "wakatime-ls"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"

description = "A dead-simple language server around wakatime-cli to send code tracking heartbeats"
repository = "https://github.com/mrnossiom/wakatime-ls"
keywords = ["wakatime", "language-server", "lsp"]
categories = ["development-tools"]
license = "CECILL-2.1"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "process", "rt"] }
tower-lsp-server = "0.21"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.dist]
inherits = "release"
lto = "thin"
